--- a/.github/workflows/sync_peloton_to_garmin.yml
+++ b/.github/workflows/sync_peloton_to_garmin.yml
@@ -13,7 +13,7 @@ on:
         type: boolean
         default: false
   schedule:
-     - cron: '*/15 * * * *'
+     - cron: '* 2,14 * * *'
 
 env:
   OUTPUT_DIR: /app/output
@@ -93,6 +93,7 @@ jobs:
         name: output
         path: ${{ env.OUTPUT_DIR }}
         if-no-files-found: error
+
 
 
 
