--- a/.github/workflows/sync_peloton_to_garmin.yml
+++ b/.github/workflows/sync_peloton_to_garmin.yml
@@ -13,7 +13,7 @@ on:
         type: boolean
         default: false
   schedule:
-     - cron: '* 2,14 * * *'
+      - cron: '0 2,14 * * *'
 
 env:
   OUTPUT_DIR: /app/output
@@ -32,7 +32,7 @@ jobs:
 
     - name: 🗃 Create config file
       env:
-        DEFAULT_WORKOUT_NUM: 5
+        DEFAULT_WORKOUT_NUM: 10
       run: |
         cat <<EOT > /app/configuration.local.json 
         {
@@ -49,7 +49,7 @@ jobs:
             "IncludeTimeInHRZones": false,
             "IncludeTimeInPowerZones": false,
             "StackedWorkouts": {
-              "AutomaticallyStackWorkouts": false,
+              "AutomaticallyStackWorkouts": true,
               "MaxAllowedGapSeconds": 300
             }
           },
@@ -93,6 +93,7 @@ jobs:
         name: output
         path: ${{ env.OUTPUT_DIR }}
         if-no-files-found: error
+
 
 
 
